--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "handlebars": "^4.0.5",
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.0",
+    "node-glob": "^1.2.0",
     "q": "^1.1.2",
     "svg2ttf": "^4.0.0",
     "svgicons2svgfont": "^5.0.0",
